<resources>
    <string name="app_name">mFriends</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Surname</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="email">E-mail</string>
    <string name="website">WWW</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
</resources>
